# MyCppProject

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: deploy-to-artifactory.yml
MyLibrary/: CMakeLists.txt  mylibrary.cpp
